// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightBarrier renders with default values 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="0"
        y="0"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="25"
        y="0"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="50"
        y="0"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="75"
        y="0"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier renders with the given parameters and shift=0 and vertical=false 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="150"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="175"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier renders with the given parameters and shift=0 and vertical=true 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="125"
      />
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="150"
      />
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="175"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier renders with the given parameters and shift=1 and vertical=false 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="150"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="175"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier renders with the given parameters and shift=1 and vertical=true 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="125"
      />
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="150"
      />
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="175"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter chunks is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="150"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="175"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="200"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter chunks is modified 2`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="150"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter left is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="40"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="65"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="90"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="115"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter length is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="20"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="20"
        x="120"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="20"
        x="140"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="20"
        x="160"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter shift is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="150"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="175"
        y="100"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter top is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="100"
        y="40"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="125"
        y="40"
      />
      
      <rect
        fill="var(--color-even)"
        height="6"
        width="25"
        x="150"
        y="40"
      />
      
      <rect
        fill="var(--color-odd)"
        height="6"
        width="25"
        x="175"
        y="40"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter vertical is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="125"
      />
      
      <rect
        fill="var(--color-even)"
        height="25"
        width="6"
        x="100"
        y="150"
      />
      
      <rect
        fill="var(--color-odd)"
        height="25"
        width="6"
        x="100"
        y="175"
      />
    </g>
  </div>
</body>
`;

exports[`StraightBarrier updates when the parameter width is modified 1`] = `
<body>
  <div>
    <g
      class="barrier straight-barrier"
    >
      
      <rect
        fill="var(--color-even)"
        height="4"
        width="25"
        x="100"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="4"
        width="25"
        x="125"
        y="100"
      />
      
      <rect
        fill="var(--color-even)"
        height="4"
        width="25"
        x="150"
        y="100"
      />
      
      <rect
        fill="var(--color-odd)"
        height="4"
        width="25"
        x="175"
        y="100"
      />
    </g>
  </div>
</body>
`;
